fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
 }
 
 html, body {
-  max-width: 100%;
+  position: absolute;
+  width: 100vw;
   overflow-x: hidden;
   overflow-y: hidden;
 }
